Lock in more situations

--- a/template/scripts/{{ project_name }}_tools/__main__.py.jinja
+++ b/template/scripts/{{ project_name }}_tools/__main__.py.jinja
@@ -1,8 +1,10 @@
 """CLI for tools."""
 
+import tomllib
 from collections.abc import Collection
 from pathlib import Path
-from re import finditer
+from re import finditer, sub
+from shlex import join, split
 
 from cyclopts import App
 
