--- a/template/scripts/{{ project_name }}_tools/sync.py.jinja
+++ b/template/scripts/{{ project_name }}_tools/sync.py.jinja
@@ -1,15 +1,37 @@
 """Sync tools."""
 
+from __future__ import annotations
+
+from dataclasses import asdict, dataclass, field
 from datetime import UTC, datetime
 from json import dumps, loads
 from pathlib import Path
 from platform import platform
-from re import finditer, search
+from re import finditer
 from shlex import quote, split
 from subprocess import run
 from sys import version_info
+from typing import Self
 
-from {{ project_name }}_tools.types import Platform, PythonVersion
+from {{ project_name }}_tools.types import (
+    Lock,
+    Op,
+    Platform,
+    PythonVersion,
+    SubmoduleInfoKind,
+    ops,
+)
+
+
+@dataclass
+class Dep:
+    """Dependency."""
+
+    op: Op
+    """Operator."""
+    rev: str
+    """Revision."""
+
 
 # ! For local dev config tooling
 PYTEST = Path("pytest.ini")
@@ -26,16 +48,33 @@ UV = REQS / "uv.in"
 """UV requirement."""
 DEV = REQS / "dev.in"
 """Other development tools and editable local dependencies."""
-NODEPS = REQS / "nodeps.in"
-"""Dependencies appended to locks without compiling their dependencies."""
-OVERRIDE = REQS / "override.txt"
+DVC = REQS / "dvc.in"
+"""Separate DVC dependency due to occasional VSCode extension sync conflict."""
+OVERRIDES = REQS / "override.txt"
 """Overrides to satisfy otherwise incompatible combinations."""
+DEPS = (
+    DEV,
+    DVC,
+    *[
+        Path(editable["path"]) / "pyproject.toml"
+        for editable in finditer(
+            r"(?m)^(?:-e|--editable)\s(?P<path>.+)$", DEV.read_text("utf-8")
+        )
+    ],
+)
+"""Paths to compile dependencies for."""
+NODEPS = REQS / "nodeps.in"
+"""Path to dependencies which should not have their transitive dependencies compiled."""
 
 # ! Platforms and Python versions
 SYS_PLATFORM: Platform = platform(terse=True).casefold().split("-")[0]  # pyright: ignore[reportAssignmentType] 1.1.356
 """Platform identifier."""
 SYS_PYTHON_VERSION: PythonVersion = ".".join([str(v) for v in version_info[:2]])  # pyright: ignore[reportAssignmentType] 1.1.356
 """Python version associated with this platform."""
+PROJECT_PLATFORM: Platform = "linux"
+"""This project's default compilation platform."""
+PROJECT_PYTHON_VERSION: PythonVersion = "3.11"
+"""This project's default Python version."""
 PLATFORMS: tuple[Platform, ...] = ("linux", "macos", "windows")
 """Supported platforms."""
 PYTHON_VERSIONS: tuple[PythonVersion, ...] = (  # pyright: ignore[reportAssignmentType] 1.1.356
@@ -45,100 +84,71 @@ PYTHON_VERSIONS: tuple[PythonVersion, ...] = (  # pyright: ignore[reportAssignme
 )
 """Supported Python versions."""
 
-# ! Checking
-UV_PAT = r"(?m)^# uv\s(?P<version>.+)$"
-"""Pattern for stored `uv` version comment."""
-SUB_PAT = r"(?m)^# submodules/(?P<name>[^\s]+)\s(?P<rev>[^\s]+)$"
-"""Pattern for stored submodule revision comments."""
-DEP_PAT = r"(?mi)^(?P<name>[A-Z0-9]|[A-Z0-9][A-Z0-9._-]*[A-Z0-9])==.+$"
-"""Pattern for compiled dependencies.
 
-See: https://packaging.python.org/en/latest/specifications/name-normalization/#name-format
-"""
-
-
-def check_compilation(high: bool = False) -> str:  # noqa: PLR0911
-    """Check compilation, re-lock if incompatible, and return the compilation.
-
-    Parameters
-    ----------
-    high
-        Highest dependencies.
-    """
-    old = get_compilation(SYS_PLATFORM, SYS_PYTHON_VERSION, high)
-    if not old:
-        return lock(high)  # Old compilation missing
-    old_uv = search(UV_PAT, old)
-    if not old_uv:
-        return lock(high)  # Unknown `uv` version last used to compile
-    if old_uv["version"] != get_uv_version():
-        return lock(high)  # Older `uv` version last used to compile
-    directs = compile(SYS_PLATFORM, SYS_PYTHON_VERSION, high, no_deps=True)
-    try:
-        subs = dict(
-            zip(finditer(SUB_PAT, old), finditer(SUB_PAT, directs), strict=False)
-        )
-    except ValueError:
-        return lock(high)  # Submodule missing
-    if any(old_sub.groups() != new_sub.groups() for old_sub, new_sub in subs.items()):
-        return lock(high)  # Submodule pinned commit SHA mismatch
-    old_directs: list[str] = []
-    for direct in finditer(DEP_PAT, directs):
-        pat = rf"(?mi)^(?P<name>{direct['name']})==(?P<ver>.+$)"
-        if match := search(pat, old):
-            old_directs.append(match.group())
-            continue
-        return lock(high)  # Direct dependency missing
-    sys_compilation = compile(SYS_PLATFORM, SYS_PYTHON_VERSION, high)
-    if any(d not in sys_compilation for d in old_directs):
-        return lock(high, sys_compilation)  # Direct dependency version mismatch
-    return old  # The old compilation is compatible
+def check_compilation(high: bool = False) -> str:
+    """Check compilation, re-lock if incompatible, and return the requirements."""
+    if high or not get_lockfile(high).exists():
+        return lock(high)
+    old_compiler = Compiler.from_lock()
+    if Compiler() != old_compiler:
+        return lock()
+    old_proj_compilation = Compilation.from_lock()
+    proj_compilation = Compiler(high=high, no_deps=True).compile()
+    if proj_compilation.directs != old_proj_compilation.directs:
+        return lock(proj_compilation=proj_compilation)
+    return Compilation.from_lock(
+        platform=SYS_PLATFORM, python_version=SYS_PYTHON_VERSION
+    ).requirements
 
 
-def lock(high: bool, sys_compilation: str = "") -> str:
-    """Lock dependencies for all platforms and Python versions."""
-    lock_contents: dict[str, str] = {}
-    for platform in PLATFORMS:  # noqa: F402
-        for python_version in PYTHON_VERSIONS:
-            key = get_compilation_key(platform, python_version, high)
-            compilation = compile(platform, python_version, high)
-            if (
-                not sys_compilation
-                and platform == SYS_PLATFORM
-                and python_version == SYS_PYTHON_VERSION
-            ):
-                sys_compilation = compilation
-            lock_contents[key] = compilation
-    get_lockfile(high).write_text(
-        encoding="utf-8", data=dumps(indent=2, sort_keys=True, obj=lock_contents) + "\n"
+def lock(high: bool = False, proj_compilation: Compilation | None = None) -> str:
+    """Lock."""
+    proj_compiler = Compiler(
+        platform=PROJECT_PLATFORM, python_version=PROJECT_PYTHON_VERSION, high=high
     )
-    return sys_compilation
+    sys_compilation = proj_compilation = proj_compilation or proj_compiler.compile()
+    contents: Lock = {}
+    contents["direct"] = {}
+    for plat in sorted(PLATFORMS):
+        for python_version in sorted(PYTHON_VERSIONS):
+            if plat == PROJECT_PLATFORM and python_version == PROJECT_PYTHON_VERSION:
+                compiler = proj_compiler
+                compilation = proj_compilation
+                contents["direct"]["time"] = compilation.time.isoformat()
+                contents["direct"]["uv"] = compiler.uv
+                contents["direct"]["project_platform"] = compiler.platform
+                contents["direct"]["project_python_version"] = compiler.python_version
+                contents["direct"]["no_deps"] = compiler.no_deps
+                contents["direct"]["high"] = compiler.high
+                contents["direct"]["paths"] = tuple(
+                    p.as_posix() for p in compiler.paths
+                )
+                contents["direct"]["overrides"] = compiler.overrides.as_posix()
+                contents["direct"]["directs"] = {
+                    k: asdict(v) for k, v in compilation.directs.items()
+                }
+                contents["direct"]["requirements"] = "\n".join([
+                    f"{name}{dep.op}{dep.rev}"
+                    for name, dep in compilation.directs.items()
+                ])
+            else:
+                compiler = Compiler(
+                    platform=plat, python_version=python_version, high=high
+                )
+                compilation = compiler.compile(directs=proj_compilation.directs)
+            key = compiler.get_lockfile_key()
+            contents[key] = {}
+            contents[key]["time"] = compilation.time.isoformat()
+            contents[key]["requirements"] = compilation.requirements
+            if plat == SYS_PLATFORM and python_version == SYS_PYTHON_VERSION:
+                sys_compilation = compilation
+    get_lockfile(high).write_text(
+        encoding="utf-8", data=dumps(indent=2, obj=contents) + "\n"
+    )
+    return sys_compilation.requirements
 
 
-def get_compilation(
-    platform: Platform, python_version: PythonVersion, high: bool
-) -> str:
-    """Get existing dependency compilations.
-
-    Parameters
-    ----------
-    high
-        Highest dependencies.
-    platform
-        Platform to compile for.
-    python_version
-        Python version to compile for.
-    """
-    lockfile = get_lockfile(high)
-    if not lockfile.exists():
-        return ""
-    contents = loads(lockfile.read_text("utf-8"))
-    return contents.get(get_compilation_key(platform, python_version, high), "")
-
-
-def get_compilation_key(
-    platform: Platform, python_version: PythonVersion, high: bool
-) -> str:
+def get_lockfile_key(platform: Platform, python_version: PythonVersion) -> str:
     """Get the name of a dependency compilation.
 
     Parameters
@@ -150,90 +160,16 @@ def get_compilation_key(
     high
         Highest dependencies.
     """
-    return "_".join([platform, python_version, *(["high"] if high else [])])
+    return "_".join([platform, python_version])
 
 
 def get_lockfile(high: bool) -> Path:
-    """Get lockfile path.
-
-    Parameters
-    ----------
-    high
-        Highest dependencies.
-    """
+    """Get lockfile path."""
     return Path(f"lock{'-high' if high else ''}.json")
 
 
-def compile(  # noqa: A001
-    platform: Platform, python_version: PythonVersion, high: bool, no_deps: bool = False
-) -> str:
-    """Compile system dependencies.
-
-    Parameters
-    ----------
-    high
-        Highest dependencies.
-    no_deps
-        Without transitive dependencies.
-    platform
-        Platform to compile for.
-    python_version
-        Python version to compile for.
-    """
-    sep = " "
-    result = run(
-        args=split(
-            sep.join([
-                "bin/uv pip compile",
-                f"--exclude-newer {datetime.now(UTC).isoformat().replace('+00:00', 'Z')}",
-                f"--python-platform {platform} --python-version {python_version}",
-                f"--resolution {'highest' if high else 'lowest-direct'}",
-                f"--override {escape(OVERRIDE)}",
-                f"--all-extras {'--no-deps' if no_deps else ''}",
-                *[
-                    escape(path)
-                    for path in [
-                        DEV,
-                        *[
-                            Path(editable["path"]) / "pyproject.toml"
-                            for editable in finditer(
-                                r"(?m)^(?:-e|--editable)\s(?P<path>.+)$",
-                                DEV.read_text("utf-8"),
-                            )
-                        ],
-                    ]
-                ],
-            ])
-        ),
-        capture_output=True,
-        check=False,
-        text=True,
-    )
-    if result.returncode:
-        raise RuntimeError(result.stderr)
-    deps = result.stdout
-    submodules = {
-        sub.group(): run(
-            split(f"git rev-parse HEAD:{sub.group()}"),  # noqa: S603
-            capture_output=True,
-            check=True,
-            text=True,
-        ).stdout.strip()
-        for sub in finditer(r"submodules/.+\b", DEV.read_text("utf-8"))
-    }
-    return (
-        "\n".join([
-            f"# uv {get_uv_version()}",
-            *[f"# {sub} {rev}" for sub, rev in submodules.items()],
-            *[line.strip() for line in deps.splitlines()],
-            *[line.strip() for line in NODEPS.read_text("utf-8").splitlines()],
-        ])
-        + "\n"
-    )
-
-
 def get_uv_version() -> str:
-    """Get the installed version of `uv`."""
+    """Get version of `uv` at `bin/uv`."""
     result = run(
         args=split("bin/uv --version"), capture_output=True, check=False, text=True
     )
@@ -242,12 +178,203 @@ def get_uv_version() -> str:
     return result.stdout.strip().split(" ")[1]
 
 
-def escape(path: str | Path) -> str:
-    """Path escape suitable for all operating systems.
+@dataclass
+class Compiler:
+    """Compiler."""
 
-    Parameters
-    ----------
-    path
-        Path to escape.
-    """
+    uv: str = field(default_factory=get_uv_version)
+    """Version of `uv` used to compile."""
+    platform: Platform = PROJECT_PLATFORM
+    """Platform compiled for."""
+    python_version: PythonVersion = PROJECT_PYTHON_VERSION
+    """Python version compiled for."""
+    high: bool = False
+    """Highest dependencies."""
+    no_deps: bool = False
+    """Without transitive dependencies."""
+    overrides: Path = OVERRIDES
+    """Overrides."""
+    paths: tuple[Path, ...] = DEPS
+    """Paths compiled from, such as `requirements.in` or `pyproject.toml`."""
+
+    def get_command(self) -> tuple[datetime, list[str]]:
+        """Command to reproduce compilation requirements."""
+        time = datetime.now(UTC)
+        return time, [
+            "bin/uv",
+            "pip",
+            "compile",
+            "--exclude-newer",
+            time.isoformat().replace("+00:00", "Z"),
+            "--python-platform",
+            self.platform,
+            "--python-version",
+            self.python_version,
+            "--resolution",
+            "highest" if self.high else "lowest-direct",
+            "--override",
+            escape(self.overrides),
+            "--all-extras",
+            *(["--no-deps"] if self.no_deps else []),
+            *[escape(path) for path in self.paths],
+        ]
+
+    def get_lockfile_key(self) -> str:
+        """Get lockfile key."""
+        return get_lockfile_key(self.platform, self.python_version)
+
+    def compile(
+        self, time: datetime = datetime.min, directs: dict[str, Dep] | None = None
+    ) -> Compilation:
+        """Compile dependencies."""
+        return Compilation(compiler=self, time=time, directs=directs or get_directs())
+
+    @classmethod
+    def from_lock(
+        cls,
+        platform: Platform | None = None,
+        python_version: PythonVersion | None = None,
+        high: bool = False,
+    ) -> Self:
+        """Get locked project compiler."""
+        contents = loads(get_lockfile(high).read_text("utf-8"))
+        return cls(
+            uv=contents["direct"]["uv"],
+            platform=platform or contents["direct"]["project_platform"],
+            python_version=(
+                python_version or contents["direct"]["project_python_version"]
+            ),
+            high=contents["direct"]["high"],
+            no_deps=(
+                contents["direct"]["no_deps"] if platform and python_version else False
+            ),
+            overrides=Path(contents["direct"]["overrides"]),
+            paths=tuple(Path(p) for p in contents["direct"]["paths"]),
+        )
+
+
+NAME_PAT = r"[A-Za-z0-9]|[A-Za-z0-9][A-Za-z0-9._-]*[A-Za-z0-9]"
+"""Regular expression for a legal Python package name.
+
+See: https://packaging.python.org/en/latest/specifications/name-normalization/#name-format
+"""
+OP_PAT = "|".join(ops)
+"""Regular expression for valid version separators."""
+
+
+def get_directs() -> dict[str, Dep]:
+    """Get directs."""
+    directs: dict[str, Dep] = {}
+    _, requirements = compile(Compiler(no_deps=True))
+    for direct in finditer(
+        rf"(?m)^(?P<name>{NAME_PAT})(?P<op>{OP_PAT})(?P<rev>.+)$", requirements
+    ):
+        op = direct["op"]
+        if not isinstance(op, str) or op not in ops:
+            raise ValueError(f"Invalid operator in {direct.groups()}")
+        directs[direct["name"]] = Dep(op=op, rev=direct["rev"])
+    return get_subs() | directs
+
+
+@dataclass
+class Compilation:
+    """Compilation."""
+
+    compiler: Compiler = field(default_factory=Compiler)
+    """Compiler used to compile."""
+    time: datetime = datetime.min
+    """Time of compilation."""
+    requirements: str = ""
+    """Result of compilation."""
+    directs: dict[str, Dep] = field(default_factory=get_directs)
+    """Direct dependencies and their revisions."""
+
+    def __post_init__(self):
+        if self.time == datetime.min or not self.requirements:
+            time, requirements = compile(self.compiler)
+            self.time = time
+            self.requirements = requirements
+
+    @classmethod
+    def from_lock(
+        cls,
+        platform: Platform | None = None,
+        python_version: PythonVersion | None = None,
+        high: bool = False,
+    ) -> Self:
+        """Get locked project compiler."""
+        contents = loads(get_lockfile(high).read_text("utf-8"))
+        if platform and python_version:
+            compiler = Compiler.from_lock(
+                platform=platform, python_version=python_version, high=high
+            )
+            key = compiler.get_lockfile_key()
+        else:
+            key = "direct"
+            compiler = Compiler.from_lock()
+        return cls(
+            compiler=compiler,
+            time=contents[key]["time"],
+            requirements=contents[key]["requirements"],
+        )
+
+
+def compile(compiler: Compiler) -> tuple[datetime, str]:  # noqa: A001
+    """Compile dependencies."""
+    time, cmd = compiler.get_command()
+    result = run(args=cmd, capture_output=True, check=False, text=True)
+    if result.returncode:
+        raise RuntimeError(result.stderr)
+    requirements = (
+        "\n".join([
+            "# nodeps",
+            *[line.strip() for line in NODEPS.read_text("utf-8").splitlines()],
+            "# compilation",
+            result.stdout,
+        ])
+        + "\n"
+    )
+    return time, requirements
+
+
+def get_subs() -> dict[str, Dep]:
+    """Get submodules."""
+    subs = dict(
+        zip(get_submodule_info("paths"), get_submodule_info("urls"), strict=True)
+    )
+    revs = {
+        item[1]: item[0]
+        for item in (
+            item.split()
+            for item in run(
+                args=split("git submodule"), capture_output=True, check=True, text=True
+            ).stdout.splitlines()
+        )
+    }
+    return {
+        path.removeprefix("submodules/"): Dep(
+            op=" @ ", rev=f"git+{subs[path]}@{revs[path]}"
+        )
+        for path in subs
+        if path not in {"submodules/template", "submodules/typings"}
+    }
+
+
+def get_submodule_info(kind: SubmoduleInfoKind) -> list[str]:
+    """Get submodule info."""
+    return [
+        item.split()[1].removesuffix(".git")
+        for item in run(
+            args=split(
+                f"git config --file .gitmodules --get-regexp {kind.removesuffix('s')}"
+            ),
+            capture_output=True,
+            check=True,
+            text=True,
+        ).stdout.splitlines()
+    ]
+
+
+def escape(path: str | Path) -> str:
+    """Escape a path, suitable for passing to e.g. {func}`~subprocess.run`."""
     return quote(Path(path).as_posix())
