Fix code of conduct link in PR template #399

--- a/template/.github/pull_request_template.md.jinja
+++ b/template/.github/pull_request_template.md.jinja
@@ -24,4 +24,4 @@
 ## Terms
 
 - [ ] My contribution follows the [contributing guide](<https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/blob/main/CONTRIBUTING.md>).
-- [ ] I agree to follow the [code of conduct](<https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/blob/main/CODE_OF_CONDUCT.md>).
+- [ ] I agree to follow the [code of conduct](<https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/blob/main/.github/CODE_OF_CONDUCT.md>).
