--- a/template/tests/pyproject.toml.jinja
+++ b/template/tests/pyproject.toml.jinja
@@ -24,7 +24,7 @@ ignore_undeclared = [
     "{{ project_name }}",
 ]
 ignore_unused = [
-    # ? Core testung tools or plugins
+    # ? Core testing tools or plugins
     "pytest-cov",
     "pytest-custom-exit-code",
     "pytest-github-actions-annotate-failures",
