--- a/template/.github/workflows/high.yml.jinja
+++ b/template/.github/workflows/high.yml.jinja
@@ -106,7 +106,7 @@ jobs:
         with:
           python-version: "{% raw %}${{ matrix.python }}{% endraw %}"
       - run: "scripts/Sync-Py.ps1"
-      - run: pyright
+      - run: "pyright"
   test:
     needs: "sync"
     strategy:
