Add more excludes to Pyright

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -74,6 +74,10 @@ exclude = [
     "**/node_modules",
     "**/__pycache__",
     "**/.*",
+    "**/.*/**",
+    "**/.venv",
+    "**/.vscode/extensions",
+    "**/AppData",
     "bin",
     "submodules/template",
     "submodules/typings",
