--- a/template/.github/issue_template.md.jinja
+++ b/template/.github/issue_template.md.jinja
@@ -1,6 +1,8 @@
-{# 🐞 Bug report #}
-{# Report a bug. Please don't request features or ask usage questions here. #}
-{# Please apply the `bug` label #}
+{% raw %}{#
+🐞 Bug report
+Report a bug. Please don't request features or ask usage questions here.
+Please apply the `bug` label
+#}{% endraw %}
 
 ### Please check that this bug hasn't been reported before
 
@@ -8,13 +10,13 @@
 
 ### Please confirm that this bug affects the latest version
 
-{# Please verify the issue is present in the latest version by installing it with `pip install {{ project_name }}=={{ project_version }}` and checking that the bug is still there #}
+{% raw %}{# Please verify the issue is present in the latest version by installing it with `pip install {{ project_name }}=={{ project_version }}` and checking that the bug is still there #}{% endraw %}
 
 - [ ] This bug affects version `{{ project_version }}` of `{{ project_name }}`.
 
 ### Please indicate which operating system(s) you are using
 
-{# Please select the most appropriate choice(s) if your exact OS is not listed #}
+{% raw %}{# Please select the most appropriate choice(s) if your exact OS is not listed #}{% endraw %}
 
 - [ ] Linux
 - [ ] macOS
@@ -22,16 +24,16 @@
 
 ### Expected behavior
 
-{# Please explain what **should** happen #}
+{% raw %}{# Please explain what **should** happen #}{% endraw %}
 
 ### Current behaviour
 
-{# Please explain what happens instead of the expected behavior #}
+{% raw %}{# Please explain what happens instead of the expected behavior #}{% endraw %}
 
 ### Steps to reproduce
 
-{# Please provide steps that would allow someone to reproduce the issue #}
+{% raw %}{# Please provide steps that would allow someone to reproduce the issue #}{% endraw %}
 
 ### Possible solution
 
-{# Please suggest a possible fix or any ideas you may have about the root cause #}
+{% raw %}{# Please suggest a possible fix or any ideas you may have about the root cause #}{% endraw %}
