--- a/template/.github/issue_template.md.jinja
+++ b/template/.github/issue_template.md.jinja
@@ -1,8 +1,8 @@
-{% raw %}{#
+<!--
 🐞 Bug report
 Report a bug. Please don't request features or ask usage questions here.
 Please apply the `bug` label
-#}{% endraw %}
+#} -->
 
 ### Please check that this bug hasn't been reported before
 
@@ -10,13 +10,13 @@ Please apply the `bug` label
 
 ### Please confirm that this bug affects the latest version
 
-{% raw %}{# Please verify the issue is present in the latest version by installing it with `pip install {{ project_name }}=={{ project_version }}` and checking that the bug is still there #}{% endraw %}
+<!-- Please verify the issue is present in the latest version by installing it with `pip install {{ project_name }}=={{ project_version }}` and checking that the bug is still there #} -->
 
 - [ ] This bug affects version `{{ project_version }}` of `{{ project_name }}`.
 
 ### Please indicate which operating system(s) you are using
 
-{% raw %}{# Please select the most appropriate choice(s) if your exact OS is not listed #}{% endraw %}
+<!-- Please select the most appropriate choice(s) if your exact OS is not listed #} -->
 
 - [ ] Linux
 - [ ] macOS
@@ -24,16 +24,16 @@ Please apply the `bug` label
 
 ### Expected behavior
 
-{% raw %}{# Please explain what **should** happen #}{% endraw %}
+<!-- Please explain what **should** happen #} -->
 
 ### Current behaviour
 
-{% raw %}{# Please explain what happens instead of the expected behavior #}{% endraw %}
+<!-- Please explain what happens instead of the expected behavior #} -->
 
 ### Steps to reproduce
 
-{% raw %}{# Please provide steps that would allow someone to reproduce the issue #}{% endraw %}
+<!-- Please provide steps that would allow someone to reproduce the issue #} -->
 
 ### Possible solution
 
-{% raw %}{# Please suggest a possible fix or any ideas you may have about the root cause #}{% endraw %}
+<!-- Please suggest a possible fix or any ideas you may have about the root cause #} -->
