--- a/template/.vscode/tasks.json.jinja
+++ b/template/.vscode/tasks.json.jinja
@@ -93,7 +93,7 @@
     {
       "label": "task: Generate changelog entry",
       "type": "shell",
-      "command": ". scripts/Initialize-Shell.ps1; python -m {{ package_name }}_tools add-change ${input:changeType}",
+      "command": ". scripts/Initialize-Shell.ps1; python -m {{ project_name }}_tools add-change ${input:changeType}",
       "icon": { "id": "request-changes" },
       "problemMatcher": []
     },
