--- a/template/.github/workflows/ci.yml.jinja
+++ b/template/.github/workflows/ci.yml.jinja
@@ -156,10 +156,11 @@ jobs:
           - "ubuntu-22.04"
           - "windows-2022"
         python:
-          # - "3.10"  # ? `scripts` currently requires `tomllib`, which is > 3.10
+          - "3.10"
           - "3.11"
-          # - "3.12" # ? No support in my commit-pinned fork of cachier
-          # - "3.13.0-alpha.5"  # ? https://github.com/PyO3/pyo3/issues/3555
+          - "3.12"
+          # - "3.13.0-beta.2"  # ? https://github.com/indygreg/python-zstandard/issues/210
+          # - "3.14.0-alpha.0"  # ? https://github.com/PyO3/pyo3/issues/3555
     runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
     steps:
       - uses: "actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332" # v4.1.7
