--- a/template/.devcontainer/devcontainer.json.jinja
+++ b/template/.devcontainer/devcontainer.json.jinja
@@ -6,7 +6,7 @@
       "version": "7.4.1"
     },
     "ghcr.io/devcontainers/features/python:1.4.2": {
-      "version": "3.11"
+      "version": "{{ python_version }}"
     },
     "ghcr.io/devcontainers/features/desktop-lite:1.0.8": {
       "noVncVersion": "1.4.0"
