Back-propagate features from boilercv, like PyPI OIDC with attestation and All Contributors

--- a/template/scripts/Initialize-Repo.ps1.jinja
+++ b/template/scripts/Initialize-Repo.ps1.jinja
@@ -1,11 +1,19 @@
 <#.SYNOPSIS
-Initialize repository prior to first commit.#>
+Initialize repository.#>
 . scripts/Initialize-Shell.ps1
 git init
-git add --all
+git add .
 git commit --no-verify -m 'Prepare template using blakeNaccarato/copier-python'
 git submodule add --force --name template 'https://github.com/blakeNaccarato/copier-python.git' submodules/template
 git submodule add --force --name typings 'https://github.com/blakeNaccarato/pylance-stubs-unofficial.git' submodules/typings
-git add --all
+git add .
 git commit --no-verify -m 'Add template and type stub submodules'
 scripts/Sync-Py.ps1
+Set-Env
+git add .
+git commit --no-verify -m 'Lock'
+git remote add origin 'https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}.git'
+git branch -M main
+git push -u origin main
+gh repo edit -d "$((Get-Content '.copier-answers.yml' |
+    Select-String -Pattern '^project_description:\s(.+)$').Matches.Groups[1].value)"
