--- a/template/.github/workflows/changerelease.yml.jinja
+++ b/template/.github/workflows/changerelease.yml.jinja
@@ -4,7 +4,6 @@ on:
   workflow_dispatch:
   push:
     branches: ["main"]
-    tags: ["*"]
     paths: ["CHANGELOG.md"]
 defaults:
   run:
@@ -21,5 +20,5 @@ jobs:
     steps:
       - uses: "dropseed/changerelease@3b121c9e98fa055f59a32b023cb4fd2325f4d9dc" # v1.6.0
         with:
-          github_token: "{% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %}"
+          github_token: "{% raw %}${{ github.token }}{% endraw %}"
           tag_prefix: ""
