--- a/template/.github/workflows/high.yml.jinja
+++ b/template/.github/workflows/high.yml.jinja
@@ -1,4 +1,4 @@
-# Test the upper-bound dependencies of the project
+# Test upper-bound project dependencies
 name: "high"
 on:
   workflow_dispatch:
