--- a/template/.github/workflows/release.yml.jinja
+++ b/template/.github/workflows/release.yml.jinja
@@ -1,37 +1,33 @@
-# Publish a Python package to PyPI
+# Publish release
 name: "release"
 on:
-  workflow_dispatch:
-defaults:
-  run:
-    shell: "pwsh"
-env:
-  UV_CACHE_DIR: ".cache/uv-cache"
-  UV_SYSTEM_PYTHON: "true"
+  release:
+    types: ["published"]
 jobs:
   release:
+    permissions:
+      contents: "write"
+      id-token: "write"
+      attestations: "write"
     strategy:
       matrix:
         runner: ["{{ actions_runner }}"]
         python: ["{{ python_version }}"]
     runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
+    environment:
+      name: "release"
+      url: "https://pypi.org/p/boilercv"
     steps:
-      - uses: "dropseed/changerelease@3b121c9e98fa055f59a32b023cb4fd2325f4d9dc" # v1.6.0
-        with:
-          github_token: "{% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %}"
-          tag_prefix: ""
       - uses: "actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332" # v4.1.7
-        with:
-          submodules: True
-      - uses: "actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9" # v4.0.2
-        with:
-          path: "{% raw %}${{ env.UV_CACHE_DIR }}{% endraw %}"
-          key: "{% raw %}uv-${{ matrix.runner }}-${{ matrix.python }}-${{ hashFiles('lock.json') }}{% endraw %}"
       - uses: "actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d" # v5.1.0
         with:
           python-version: "{% raw %}${{ matrix.python }}{% endraw %}"
-      - run: "scripts/Sync-Py.ps1"
-      - run: ". scripts/Initialize-Shell.ps1; flit publish"
+      - run: "curl -LsSf https://astral.sh/uv/install.sh | sh"
+      - run: "python -m pip install build; python -m build --installer uv"
+      - uses: actions/attest-build-provenance@bdd51370e0416ac948727f861e03c2f05d32d78e # v1.3.2
+        with:
+          subject-path: "dist/**"
+      - run: "gh release upload '{% raw %}${{ github.event.release.tag_name }}{% endraw %}' dist/**"
         env:
-          FLIT_USERNAME: "__token__"
-          FLIT_PASSWORD: "{% raw %}${{ secrets.PYPI_TOKEN }}{% endraw %}"
+          GITHUB_TOKEN: "{% raw %}${{ github.token }}{% endraw %}"
+      - uses: "pypa/gh-action-pypi-publish@ec4db0b4ddc65acdf4bff5fa45ac92d78b56bdf0" # v1.9.0
