--- a/template/docs/index.md.jinja
+++ b/template/docs/index.md.jinja
@@ -1,5 +1,7 @@
 # `{{ project_name }}`
 
+[![All Contributors](https://img.shields.io/github/all-contributors/{{ project_owner_github_username }}/{{ github_repo_name }}?color=ee8449&style=flat-square)](../README.md#contributors)
+
 {{ project_description }}.
 
 :::{toctree}
@@ -7,6 +9,7 @@
 contributing
 examples/index
 changelog
+contributors
 apidocs/index
 references
 :::
