--- a/template/scripts/Initialize-Machine.ps1.jinja
+++ b/template/scripts/Initialize-Machine.ps1.jinja
@@ -10,6 +10,10 @@ catch [System.Management.Automation.NativeCommandExitException] { $name = '' }
 if (!$name) {
     git config --global user.name "$((Get-Content '.copier-answers.yml' |
     Select-String -Pattern '^project_owner_github_username:\s(.+)$').Matches.Groups[1].value)"
+    # Have Git auto set up local branches to track remote branches if not yet configured
+    try { $name = git config --global push.autoSetupRemote }
+    catch [System.Management.Automation.NativeCommandExitException] { $name = '' }
+    if (!$name) { git config --global push.autoSetupRemote true }
 }
 
 # Set Git email if missing
