--- a/template/scripts/Initialize-Repo.ps1.jinja
+++ b/template/scripts/Initialize-Repo.ps1.jinja
@@ -2,6 +2,11 @@
 Initialize repository.#>
 . scripts/Initialize-Shell.ps1
 git init
+
+# Modify GitHub repo later on only if there were not already commits in this repo
+try { git rev-parse HEAD }
+catch [System.Management.Automation.NativeCommandExitException] { $fresh = $true }
+
 git add .
 git commit --no-verify -m 'Prepare template using blakeNaccarato/copier-python'
 git submodule add --force --name template 'https://github.com/blakeNaccarato/copier-python.git' submodules/template
@@ -12,10 +17,16 @@ scripts/Sync-Py.ps1
 Set-Env
 git add .
 git commit --no-verify -m 'Lock'
-if (!(git remote)) {
-    git remote add origin 'https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}.git'
-    git branch -M main
-}
-git push -u origin main
-gh repo edit -d "$((Get-Content '.copier-answers.yml' |
+
+# Modify GitHub repo if there were not already commits in this repo
+if ($fresh) {
+    if (!(git remote)) {
+        git remote add origin 'https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}.git'
+        git branch --move --force main
+    }
+    gh repo edit --description "$((Get-Content '.copier-answers.yml' |
     Select-String -Pattern '^project_description:\s(.+)$').Matches.Groups[1].value)"
+    gh repo edit --homepage 'https://{{ project_owner_github_username }}.github.io/{{ github_repo_name }}/'
+}
+
+git push --set-upstream origin main
