Sync template with boilercv

--- a/template/.all-contributorsrc.jinja
+++ b/template/.all-contributorsrc.jinja
@@ -2,7 +2,10 @@
   "commitConvention": "angular",
   "commitType": "docs",
   "contributorsPerLine": 7,
-  "files": ["CONTRIBUTORS.md", "README.md"],
+  "files": [
+  "CONTRIBUTORS.md",
+  "README.md"
+  ],
   "projectName": "{{ github_repo_name }}",
   "projectOwner": "{{ project_owner_github_username }}"
 }
