--- a/template/README.md.jinja
+++ b/template/README.md.jinja
@@ -1,5 +1,7 @@
 # {{ project_name }}
 
+[![All Contributors](https://img.shields.io/github/all-contributors/softboiler/boilercv?color=ee8449&style=flat-square)](#contributors)
+
 {{ project_description }}.
 
 ## Project information
@@ -7,3 +9,8 @@
 - [Changes](<https://{{ project_owner_github_username }}.github.io/{{ github_repo_name }}/changelog.html>)
 - [Docs](<https://{{ project_owner_github_username }}.github.io/{{ github_repo_name }}>)
 - [Contributing](<https://{{ project_owner_github_username }}.github.io/{{ github_repo_name }}/contributing.html>)
+
+## Contributors
+
+<!-- ALL-CONTRIBUTORS-LIST:START - Do not remove or modify this section -->
+<!-- ALL-CONTRIBUTORS-LIST:END -->
