--- a/template/.github/workflows/release.yml.jinja
+++ b/template/.github/workflows/release.yml.jinja
@@ -4,19 +4,6 @@ on:
   release:
     types: ["published"]
 jobs:
-  changerelease:
-    strategy:
-      matrix:
-        runner: ["ubuntu-22.04"]
-        python: ["3.11"]
-    permissions:
-      contents: "write"
-    runs-on: "${{ matrix.runner }}"
-    steps:
-      - uses: "dropseed/changerelease@3b121c9e98fa055f59a32b023cb4fd2325f4d9dc" # v1.6.0
-        with:
-          github_token: "${{ github.token }}"
-          tag_prefix: ""
   release:
     permissions:
       contents: "write"
@@ -29,7 +16,7 @@ jobs:
     runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
     environment:
       name: "release"
-      url: "https://pypi.org/p/boilercv"
+      url: "https://pypi.org/p/{{ github_repo_name }}"
     steps:
       - uses: "actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332" # v4.1.7
       - uses: "actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d" # v5.1.0
@@ -44,3 +31,5 @@ jobs:
         env:
           GITHUB_TOKEN: "{% raw %}${{ github.token }}{% endraw %}"
       - uses: "pypa/gh-action-pypi-publish@ec4db0b4ddc65acdf4bff5fa45ac92d78b56bdf0" # v1.9.0
+  changerelease:
+    uses: "./.github/workflows/changerelease.yml"
