--- a/changelog/towncrier_template.md.jinja
+++ b/changelog/towncrier_template.md.jinja
@@ -17,33 +17,26 @@ These changes reflect the current [development progress](https://github.com/blak
 {% for category, val in definitions.items() if category in sections[section] %}
 ### {{ definitions[category]['name'] }}
 
-{% if definitions[category]['showcontent'] %}
 {% for text, values in sections[section][category].items() %}
 - {{ text }}
 {%- if values %}
 {% if "\n  - " in text or '\n  * ' in text %}
 
 
-(
+  (
 {%- else %}
-(
+{% if text %} ({% endif %}
 {%- endif -%}
 {%- for issue in values %}
 {{ issue.split(": ", 1)[0] }}{% if not loop.last %}, {% endif %}
 {%- endfor %}
-)
+{% if text %}){% endif %}
+
 {% else %}
 
 {% endif %}
 {% endfor %}
 
-{% else %}
-- {% for issue in sections[section][category][''] %}
-{{ issue.split(": ", 1)[0] }}{% if not loop.last %}, {% endif %}
-{% endfor %}
-
-
-{% endif %}
 {% if issues_by_category[section][category] and "]: " in issues_by_category[section][category][0] %}
 {% for issue in issues_by_category[section][category] %}
 {{ issue }}
