--- a/template/changelog/towncrier_template.md.jinja.jinja
+++ b/template/changelog/towncrier_template.md.jinja.jinja
@@ -1,10 +1,12 @@
 {% raw %}{% if render_title %}{# Built documentation only #}{%- if versiondata["version"] == "main" -%}
 ## Unreleased
 :::{warning}
-These changes reflect the current [development progress](https://github.com/{% endraw %}{{ project_owner_github_username }}/{{ github_repo_name }}{% raw %}/tree/main) and have **not** been part of a PyPI release yet.
+These changes reflect the current [development progress](https://github.com/{% endraw %}{{ project_owner_github_username
+}}/{{ github_repo_name }}{% raw %}/tree/main) and have **not** been part of a PyPI release yet.
 :::
 {# CHANGELOG.md entries #}{% else -%}
-## [{{ versiondata["version"] }}](https://github.com/{% endraw %}{{ project_owner_github_username }}/{{ github_repo_name }}{% raw %}/tree/{{ versiondata["version"] }})
+## [{{ versiondata["version"] }}](https://github.com/{% endraw %}{{ project_owner_github_username }}/{{ github_repo_name
+}}{% raw %}/tree/{{ versiondata["version"] }})
 {% endif %}
 {% endif %}
 {% for section, _ in sections.items() %}
@@ -17,33 +19,26 @@ These changes reflect the current [development progress](https://github.com/{% e
 {% for category, val in definitions.items() if category in sections[section] %}
 ### {{ definitions[category]['name'] }}
 
-{% if definitions[category]['showcontent'] %}
 {% for text, values in sections[section][category].items() %}
 - {{ text }}
 {%- if values %}
-{% if "\n  - " in text or '\n  * ' in text %}
+{% if "\n - " in text or '\n * ' in text %}
 
 
 (
 {%- else %}
-(
+{% if text %} ({% endif %}
 {%- endif -%}
 {%- for issue in values %}
 {{ issue.split(": ", 1)[0] }}{% if not loop.last %}, {% endif %}
 {%- endfor %}
-)
+{% if text %}){% endif %}
+
 {% else %}
 
 {% endif %}
 {% endfor %}
 
-{% else %}
-- {% for issue in sections[section][category][''] %}
-{{ issue.split(": ", 1)[0] }}{% if not loop.last %}, {% endif %}
-{% endfor %}
-
-
-{% endif %}
 {% if issues_by_category[section][category] and "]: " in issues_by_category[section][category][0] %}
 {% for issue in issues_by_category[section][category] %}
 {{ issue }}
