Allow changerelease to continue on error

--- a/template/.github/workflows/changerelease.yml.jinja
+++ b/template/.github/workflows/changerelease.yml.jinja
@@ -11,6 +11,7 @@ defaults:
     shell: "pwsh"
 jobs:
   changerelease:
+    continue-on-error: true
     strategy:
       matrix:
         runner: ["{{ actions_runner }}"]
