--- a/template/README.md.jinja
+++ b/template/README.md.jinja
@@ -1,6 +1,6 @@
 # {{ project_name }}
 
-[![All Contributors](https://img.shields.io/github/all-contributors/{{ project_owner_github_username }}/{{ project_owner_github_username }}?color=ee8449&style=flat-square)](#contributors)
+[![All Contributors](https://img.shields.io/github/all-contributors/{{ project_owner_github_username }}/{{ github_repo_name }}?color=ee8449&style=flat-square)](#contributors)
 
 {{ project_description }}.
 
