Try single-sourcing release workflow

--- a/template/scripts/Initialize-Windows.ps1.jinja
+++ b/template/scripts/Initialize-Windows.ps1.jinja
@@ -1,14 +1,16 @@
 <#.SYNOPSIS
 Initialize Windows machine.#>
 
+$origPreference = $ErrorActionPreference
+$ErrorActionPreference = 'SilentlyContinue'
 # Install Python
-winget install --source 'winget' --id 'Python.Python.{{ python_version }}' --override '/quiet PrependPath=0'
+winget install --source='winget' --id='Python.Python.{{ python_version }}' --override='/quiet PrependPath=0'
 # Install VSCode
-winget install --source 'winget' --id 'Microsoft.VisualStudioCode'
+winget install --source='winget' --id='Microsoft.VisualStudioCode'
 # Install Windows Terminal
-winget install --source 'winget' --id 'Microsoft.WindowsTerminal'
+winget install --source='winget' --id='Microsoft.WindowsTerminal'
 # Install GitHub CLI
-winget install --source 'winget' --id 'GitHub.cli'
+winget install --source='winget' --id='GitHub.cli'
 # Install git
 @'
 [Setup]
@@ -35,4 +37,5 @@ EnableSymlinks=Disabled
 EnablePseudoConsoleSupport=Disabled
 EnableFSMonitor=Enabled
 '@ | Out-File ($inf = New-TemporaryFile)
-winget install --source 'winget' --id 'Git.Git' --override "/SILENT /LOADINF=$inf"
+winget install --source='winget' --id='Git.Git' --override="/SILENT /LOADINF=$inf"
+$ErrorActionPreference = $origPreference
