--- a/template/.github/workflows/release.yml.jinja
+++ b/template/.github/workflows/release.yml.jinja
@@ -1,8 +1,16 @@
 # Publish release
 name: "release"
+concurrency:
+  group: "{% raw %}${{ github.workflow }}-${{ github.ref }}{% endraw %}"
+  cancel-in-progress: True
 on:
   release:
     types: ["published"]
+defaults:
+  run:
+    shell: "pwsh"
+env:
+  UV_SYSTEM_PYTHON: "true"
 jobs:
   release:
     permissions:
@@ -22,8 +30,8 @@ jobs:
       - uses: "actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d" # v5.1.0
         with:
           python-version: "{% raw %}${{ matrix.python }}{% endraw %}"
-      - run: "curl -LsSf https://astral.sh/uv/install.sh | sh"
-      - run: "python -m pip install build; python -m build --installer uv"
+      - run: "scripts/Sync-Py.ps1 -Release"
+      - run: "python -m build --installer uv"
       - uses: actions/attest-build-provenance@bdd51370e0416ac948727f861e03c2f05d32d78e # v1.3.2
         with:
           subject-path: "dist/**"
