--- a/template/scripts/pyproject.toml.jinja
+++ b/template/scripts/pyproject.toml.jinja
@@ -13,6 +13,7 @@ dependencies = [
     "dulwich==0.22.1",
     "ipython==8.25.0",
     "pipx==1.6.0",
+    "typing-extensions==4.12.2",
 ]
 [project.scripts]
 "{{ project_name }}_tools" = "{{ project_name }}_tools.__main__:main"
